<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="2dp"
        android:hapticFeedbackEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:navigationIconTint="@color/x11_gray"
        app:title="@string/app_name"
        app:titleCentered="true" />


    <RelativeLayout
        android:id="@+id/constraint_RL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/canvas_background"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/material_dynamic_neutral_variant30"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/constraint_RL"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white"
        app:tint="@color/white" />

    <HorizontalScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:layout_behavior="com.prem.assignment.AppBarScroll"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/undo_btn"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ripple_icon_background"
                    android:padding="1dp"
                    android:src="@drawable/ic_baseline_undo_24"
                    app:tint="@color/x11_gray" />

                <ImageButton
                    android:id="@+id/redo_btn"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ripple_icon_background"
                    android:padding="1dp"
                    android:src="@drawable/baseline_redo_24"
                    app:tint="@color/x11_gray" />

            </LinearLayout>


            <TextView
                android:id="@+id/font_selection_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_icon_background"
                android:enabled="false"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/font"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sub_size_btn"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/x11_gray"
                    android:enabled="false"
                    android:padding="1dp"
                    android:text="@string/subtract" />

                <TextView
                    android:id="@+id/size_view_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:text="@string/_0" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_size_btn"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/x11_gray"
                    android:enabled="false"
                    android:padding="1dp"
                    android:text="@string/add" />

            </LinearLayout>

            <TextView
                android:id="@+id/bold_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_icon_background"
                android:enabled="false"
                android:paddingHorizontal="20dp"
                android:text="@string/bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/italic_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_icon_background"
                android:enabled="false"
                android:paddingHorizontal="15dp"
                android:text="@string/italic"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
